[HTML + CSS] clean HTML comments and solve overflow object for mobile layout

--- a/style.css
+++ b/style.css
@@ -770,6 +770,7 @@ the div "actblock" must be arrage in column */
   #choixville #labelfield {
     order: 1;
     visibility: hidden;
+    position: absolute;
   }
   #choixville {
     position: relative;
